Cabal-version:       >=1.10

Name:                Weather
Version:             0.1.0.0
Build-type:          Simple

Category:            Foreign, .NET

Author:              Andrew Appleyard
Maintainer:          tim.matthews7@gmail.com
Homepage:            http://haskell.org/haskellwiki/Salsa

License:             BSD3
Copyright:           (c) 2007-2015 Andrew Appleyard, Tim Matthews

Executable Weather
  Default-language:    Haskell2010

  Main-is:             Weather.hs

  Build-depends:       base, Salsa
